# harami

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.gitea/workflows/: pipeline.yaml
.scripts/: build-package  deploy-package  init-venv  init-venv.ps1  init-venv.sh  publish-packages.sh  run-tests  with-venv.sh
docs/: conf.py  contact.rst  index.rst  license.rst  quickstart.rst  requirements.txt
docs/ref/: events.rst  index.rst  observables.rst
harami/: EventArgs.py  EventHandler.py  EventSource.py  Observable.py  Observer.py  __init__.py  events.py  observables.py
src/harami/: EventArgs.py  EventHandler.py  EventSource.py  Observable.py  Observer.py  __init__.py
tests/: EventTests.py  ObservableTests.py
