[project]
name = "harami"
version = "0.0.0"
description = "A lightweight 'Event' and 'Observable' library."
keywords = ["event", "eventhandler", "observable", "observer"]
authors = [
    { name="Shaun Wilson", email="mrshaunwilson@msn.com" }
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "punit (>=1.4)",
    "twine"
]

[project.urls]
Documentation = "https://harami.readthedocs.io/"
Homepage = "https://github.com/wilson0x4d/harami"
Repository = "https://github.com/wilson0x4d/harami.git"

[tool.setuptools.package-data]
"harami" = ["py.typed"]
